2003-08-13  Christian Neumair  <chris@gnome-de.org>

	* gnome-vfs.applications: Use AbiWord 2.0 executable.
	* gnome-vfs.keys.in: Make Wine the default application for MS DOS
	executables.

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* configure.in: 2.3.1 is out

2003-07-28  Mark McLoughlin  <mark@skynet.ie>

	* gnome-vfs.keys.in: make the default action for pdf to use
	the gpdf embedded viewer.

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* AUTHORS: spell my name properly
	* gnome-vfs.applications: added a vim application, changed the default
	command for gvim and vim to set the current directory to the directory
	the file is in (Closes: #114792)
	* gnome-vfs.keys.in: added vim as an option before plain vi

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: Patch from Hidetoshi Tajima
	<hidetoshi.tajima@sun.com> to avoid duplicate Audio and Images entries
	in gnome-file-types-properties (Closes: #113938)

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added application/x-bzip2 mimetype (blame
	Sourceforge) (Closes: #117087), removed guitar as a possible handler,
	it's dead

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added blend and BLEND as possible suffixes for
	Blender files (Closes: #118024)

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: Fix Real and Blender mime-types to go through
	check-mime.pl

2003-07-15  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-vfs.keys.in: use gpdf if available.

2003-07-12  Joël Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-07-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: .mp3 files are now audio/mpeg

2003-07-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.mime: only .ram files are playlists, not the others,
	added rv as a possible extension of Real Media stuff, removed